fix table css and footer

--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -1,11 +1,5 @@
-<aside>
-  <div class="sidenote">
-    &copy; {{ .Site.Copyright }} <br />Powered by <a href="http://gohugo.io" target="_blank">Hugo</a>
-  </div>
-</aside>
 <footer id="footer">
-    </br>
-    </br>
+    &copy; {{ .Site.Params.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a>
 </footer>
 </main>
 </body>
