Remove github pages

--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -27,7 +27,7 @@
                     {{ end }}
                     <br/>
                     {{ .Site.Params.Redirect | markdownify }}<br/><strong>$ curl -L
-                        edouard.paris{{ .RelPermalink }}index.txt | less</strong>
+                        edouard.paris{{ .RelPermalink }} | less</strong>
                     <br/>
                     {{ if .Params.toc }}
                         {{.TableOfContents}}
