--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -1,101 +1,108 @@
 /* CSS */
 @import url(https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css);
 
-html, body {
-  font-size: 10pt;
-  font-family: 'Fira Code', monospace;
-  color: #1F2429;
-  background-color: hsla(0, 0%, 97%, 1);
-  height: 100%;
-  margin: 0;
-  padding: 0;
+html,
+body {
+    font-size: 10pt;
+    font-family: 'Fira Code', monospace;
+    color: #1F2429;
+    background-color: hsla(0, 0%, 97%, 1);
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 10pt;
-  font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 10pt;
+    font-weight: bold;
 }
 
 h1 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 a {
-  color: #1F2429;
-  text-decoration: none;
+    color: #1F2429;
+    text-decoration: none;
 }
 
-a:hover, a:focus {
-  color: #fff;
-  background-color: #1F2429;
+a:hover,
+a:focus {
+    color: #fff;
+    background-color: #1F2429;
 }
 
 p {
-  line-height: 1.4;
+    line-height: 1.4;
 }
 
 blockquote {
-  font-style: italic;
+    font-style: italic;
 }
 
 code {
- font-size: 10pt;
- font-family: 'Fira Code', monospace;
- background-color: #fff;
+    font-size: 10pt;
+    font-family: 'Fira Code', monospace;
+    background-color: #fff;
 }
 
 .highlight {
-  display: block;
-  overflow: scroll;
-  padding: 5px;
-  border-top: 1px solid #ddd8dd;
-  border-bottom: 1px solid #ddd8dd;
-  background-color: #fff;
+    display: block;
+    overflow: scroll;
+    padding: 5px;
+    border-top: 1px solid #ddd8dd;
+    border-bottom: 1px solid #ddd8dd;
+    background-color: #fff;
 }
 
 nav {
-  display: block;
-  margin-top: 25px;
+    display: block;
+    margin-top: 25px;
 }
 
 nav ul {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 0;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 nav>ul>li {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 0;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .menu-section {
-  width: 20%;
+    width: 20%;
 }
 
 .copyright {
-  width: 30%;
+    width: 30%;
 }
 
 .menu-section h3 {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .menu-section ul {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .menu-lang {
-  padding: 0;
+    padding: 0;
 }
 
 nav li {
-  list-style-type: none;
+    list-style-type: none;
 }
 
-ol li{
+ol li {
     margin-top: 10px;
 }
 
@@ -104,44 +111,67 @@ ol li:first-child {
 }
 
 .date {
-  float: right;
+    float: right;
 }
 
-.article-body>p, ul, li, h1, h2, h3, h4, h5, h6, blockquote {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.article-body>p,
+ul,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+blockquote {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
 }
 
-.section-body>p, ul, li, h1, h2, h3, h4, h5, h6, blockquote {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.article-body>img {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.section-body>p,
+ul,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+blockquote {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
 }
 
 main {
-  border-right: 1px solid #ddd8dd;
-  border-left: 1px solid #ddd8dd;
-  display: block;
-  max-width: 1440px;
-  min-height: 100%;
-  margin-left: auto;
-  margin-right: auto;
+    border-right: 1px solid #ddd8dd;
+    border-left: 1px solid #ddd8dd;
+    display: block;
+    max-width: 1440px;
+    min-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 section {
-  display: block;
-  width: calc(80ch + 5rem);
-  border-right: 1px solid #ddd8dd;
-  min-height: 100vh;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+    display: block;
+    width: calc(80ch + 5rem);
+    border-right: 1px solid #ddd8dd;
+    min-height: 100vh;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 section li {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 section a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .head-aside {
@@ -149,8 +179,8 @@ section a {
 }
 
 .sidenote {
-  font-size: 8pt;
-  max-width: calc(1440px/4);
+    font-size: 8pt;
+    max-width: calc(1440px/4);
 }
 
 .sidenote>blockquote {
@@ -159,48 +189,50 @@ section a {
 }
 
 .sidenote a {
-  color: #067df7;
+    color: #067df7;
 }
+
 .sidenote a:hover,
 .sidenote a:focus {
-  color: #fff;
-  background-color: #067df7;
+    color: #fff;
+    background-color: #067df7;
 }
 
 .blue-link>a {
-  color: #067df7;
+    color: #067df7;
 }
+
 .blue-link a:hover,
 .blue-link a:focus {
-  color: #fff;
-  background-color: #067df7;
+    color: #fff;
+    background-color: #067df7;
 }
 
 @media not all and (max-width: 43.6rem) {
-  aside {
-    position: absolute;
-    margin-left: calc(80ch + 6.5rem);
-    min-width: 50ch;
-  }
+    aside {
+        position: absolute;
+        margin-left: calc(80ch + 6.5rem);
+        min-width: 50ch;
+    }
 }
 
 .article-body ul {
-  padding-left: 4ch;
-  max-width: 68ch;
+    padding-left: 4ch;
+    max-width: 68ch;
 }
 
 .title {
-  margin: 7%;
-  text-align: center;
+    margin: 7%;
+    text-align: center;
 }
 
 article {
-  display: block;
-  border-top: none;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: justify;
-  line-height: 1.25em;
+    display: block;
+    border-top: none;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    line-height: 1.25em;
 }
 
 table {
@@ -209,12 +241,14 @@ table {
 }
 
 table>thead>tr>th {
-  font-weight: bold;
-  text-align: left;
+    font-weight: bold;
+    text-align: left;
 }
 
-tr, td, th {
-  border-bottom: 1px solid #ddd8dd;
+tr,
+td,
+th {
+    border-bottom: 1px solid #ddd8dd;
 }
 
 table>thead>tr>th,
@@ -223,113 +257,115 @@ table>tfoot>tr>th,
 table>thead>tr>td,
 table>tbody>tr>td,
 table>tfoot>tr>td {
-  padding: 8px;
+    padding: 8px;
 }
 
 th:first-child {
-  padding-left: 2.5rem;
+    padding-left: 2.5rem;
 }
 
 td:first-child {
-  padding-left: 2.5rem;
+    padding-left: 2.5rem;
 }
 
 .list-item {
-  padding-top: 10px;
+    padding-top: 10px;
 }
 
 .tuple td {
-  vertical-align: text-top;
+    vertical-align: text-top;
 }
 
 .tr-title {
-  width: 45ch;
+    width: 45ch;
 }
 
 .tr-section {
-  width: 15ch;
-  text-align: right;
+    width: 15ch;
+    text-align: right;
 }
 
 .article-header {
- padding-left: 2.5rem;
- padding-top: 2rem;
- padding-bottom: 2rem;
- border-bottom: 1px solid #ddd8dd;
+    padding-left: 2.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid #ddd8dd;
 }
 
 .article-header a {
-  color: #067df7;
+    color: #067df7;
 }
+
 .article-header a:hover,
 .article-header a:focus {
-  color: #fff;
-  background-color: #067df7;
+    color: #fff;
+    background-color: #067df7;
 }
 
 .article-header ul {
-  padding-left: 4ch;
-  max-width: 68ch;
+    padding-left: 4ch;
+    max-width: 68ch;
 }
 
 .article-body a {
-  color: #067df7;
+    color: #067df7;
 }
+
 .article-body a:hover,
 .article-body a:focus {
-  color: #fff;
-  background-color: #067df7;
+    color: #fff;
+    background-color: #067df7;
 }
 
 img {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
 
 hr {
-  width: 100%;
-  border-top: 1px solid #ddd8dd;
-  border-bottom: none;
-  border-left: none;
-  border-right: none;
+    width: 100%;
+    border-top: 1px solid #ddd8dd;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
 }
 
 .article-body ul {
-  padding-left: 4ch;
-  max-width: 68ch;
+    padding-left: 4ch;
+    max-width: 68ch;
 }
 
 .article-body ol {
-  padding-left: 4ch;
-  max-width: 71ch;
-  counter-reset: item;
+    padding-left: 4ch;
+    max-width: 71ch;
+    counter-reset: item;
 }
 
 .article-body li {
-  display: block;
-  text-indent: -2ch;
-  text-align: left;
+    display: block;
+    text-indent: -2ch;
+    text-align: left;
 }
 
 .article-body ul li:before {
-  content: "- ";
+    content: "- ";
 }
 
 .article-body ol li:before {
-  content: counters(item, ".") ". ";
-  counter-increment: item;
+    content: counters(item, ".") ". ";
+    counter-increment: item;
 }
 
 .latest ul {
-  list-style: none;
-  max-width: none;
+    list-style: none;
+    max-width: none;
 }
 
 .latest ul li {
-  list-style: none;
-  margin-left: 0;
-  text-indent: 0;
-  padding-left: 2.5rem;
+    list-style: none;
+    margin-left: 0;
+    text-indent: 0;
+    padding-left: 2.5rem;
 }
 
 .latest ul li:before {
@@ -337,70 +373,87 @@ hr {
 }
 
 .latest a {
-  color: #1F2429;
-  text-decoration: none;
+    color: #1F2429;
+    text-decoration: none;
 }
 
-.latest a:hover, a:focus {
-  color: #fff;
-  background-color: #1F2429;
+.latest a:hover,
+a:focus {
+    color: #fff;
+    background-color: #1F2429;
 }
 
 #footer {
-  padding-left: 2.5rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  border-top: 1px solid #ddd8dd;
-  border-bottom: 1px solid #ddd8dd;
+    padding-left: 2.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-top: 1px solid #ddd8dd;
+    border-bottom: 1px solid #ddd8dd;
 }
 
 .menu {
-  display: flex;
+    display: flex;
 }
 
 .language-ascii {
-  color: #067df7;
-  display: block;
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
-  background-color: transparent;
+    color: #067df7;
+    display: block;
+    margin-right: 2.5rem;
+    margin-left: 2.5rem;
+    background-color: transparent;
 }
 
 .language-ascii-art-black {
-  color: #067df7;
-  display: block;
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
-  background-color: transparent;
+    color: #067df7;
+    display: block;
+    margin-right: 2.5rem;
+    margin-left: 2.5rem;
+    background-color: transparent;
 }
 
 .language-ascii-art-blue {
-  color: #067df7;
-  display: block;
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
-  background-color: transparent;
+    color: #067df7;
+    display: block;
+    margin-right: 2.5rem;
+    margin-left: 2.5rem;
+    background-color: transparent;
 }
 
 .language-ascii-art-pink {
-  color: #ff0080;
-  display: block;
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
-  background-color: transparent;
+    color: #ff0080;
+    display: block;
+    margin-right: 2.5rem;
+    margin-left: 2.5rem;
+    background-color: transparent;
 }
 
 @media (max-width: 640px) {
-	* {
-		box-sizing: border-box;
-	}
+    * {
+        box-sizing: border-box;
+    }
 
-    p, ul, li, h1, h2, h3, h4, h5, h6 {
+    p,
+    ul,
+    li,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         padding-left: 1rem;
         padding-right: 1rem;
     }
 
-    .article-body p, ul, li, h1, h2, h3, h4, h5, h6 {
+    .article-body p,
+    ul,
+    li,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         padding-left: 1rem;
         padding-right: 1rem;
     }
@@ -424,96 +477,108 @@ hr {
         padding-right: 1rem;
     }
 
-    .section-body>p, ul, li, h1, h2, h3, h4, h5, h6, blockquote {
+    .section-body>p,
+    ul,
+    li,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    blockquote {
         padding-left: 1rem;
         padding-right: 1rem;
     }
 
-	/* passer body (et tous les éléments de largeur fixe) en largeur automatique */
+    /* passer body (et tous les éléments de largeur fixe) en largeur automatique */
 
-	body {
-		width: auto;
-		margin: 0;
-		padding: 0;
-	}
+    body {
+        width: auto;
+        margin: 0;
+        padding: 0;
+    }
 
-  section {
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-    border-right: none; 
-  }
+    section {
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
+        border-right: none;
+    }
 
-  main {
-    width: auto;
-    margin-top: 0px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    main {
+        width: auto;
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-  #footer {
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    #footer {
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-	/* fixer une largeur maximale de 100% aux éléments potentiellement problématiques */
+    /* fixer une largeur maximale de 100% aux éléments potentiellement problématiques */
 
-	img,
-	table,
-	td,
-	blockquote,
-	code,
-	pre,
-	textarea,
-	input,
-	iframe,
-	object,
-	embed,
-	video {
-		max-width: 100%;
-	}
+    img,
+    table,
+    td,
+    blockquote,
+    code,
+    pre,
+    textarea,
+    input,
+    iframe,
+    object,
+    embed,
+    video {
+        max-width: 100%;
+    }
 
-	/* conserver le ratio des images */
+    /* conserver le ratio des images */
 
-	img {
-		height: auto;
-	}
+    img {
+        height: auto;
+    }
 
-	/* gestion des mots longs */
+    /* gestion des mots longs */
 
-	textarea,
-	table,
-	td,
-	th,
-	code,
-	pre,
-	samp {
-		-webkit-hyphens: auto; /* césure propre */
-		-moz-hyphens: auto;
-		hyphens: auto;
-		word-wrap: break-word; /* passage à la ligne forcé */
-	}
+    textarea,
+    table,
+    td,
+    th,
+    code,
+    pre,
+    samp {
+        -webkit-hyphens: auto;
+        /* césure propre */
+        -moz-hyphens: auto;
+        hyphens: auto;
+        word-wrap: break-word;
+        /* passage à la ligne forcé */
+    }
 
-	code,
-	pre,
-	samp {
-		white-space: pre-wrap; /* passage à la ligne spécifique pour les éléments à châsse fixe */
-	}
+    code,
+    pre,
+    samp {
+        white-space: pre-wrap;
+        /* passage à la ligne spécifique pour les éléments à châsse fixe */
+    }
 
-	/* Passer à une seule colonne (à appliquer aux éléments multi-colonnes) */
+    /* Passer à une seule colonne (à appliquer aux éléments multi-colonnes) */
 
-	.element1,
-	.element2 {
-		float: none;
-		width: auto;
-	}
+    .element1,
+    .element2 {
+        float: none;
+        width: auto;
+    }
 
-	/* masquer les éléments superflus */
+    /* masquer les éléments superflus */
 
-	.hide_mobile {
-		display: none !important;
-	}
+    .hide_mobile {
+        display: none !important;
+    }
 
     .language-ascii-art-black {
         margin: 0px;
