fix css and head

--- a/themes/phrck/layouts/shortcodes/latest.html
+++ b/themes/phrck/layouts/shortcodes/latest.html
@@ -1,20 +1,23 @@
 <div class="latest">
-<ul>
-    {{ $section := .Get "section" }}
-    {{ $posts := (where .Site.RegularPages "Type" $section).ByDate.Reverse | first 5 }}
-    {{ range $posts }}
-    <li>
-        <span>
-            <time>
-                {{ with .Site.Params.DateForm }}
-                {{ .Date.Format . }}
-                {{ else }}
-                {{ .Date.Format "2006 Jan 02" }}
-                {{ end }}
-            </time>
-        </span>|
-        <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </li>
-    {{ end }}
-</ul>
+    <ul>
+        {{ $section := .Get "section" }}
+        {{ $posts := (where .Site.RegularPages "Type" $section).ByDate.Reverse | first 5 }}
+        {{ range $posts }}
+        <li>
+            <span>
+                <time>
+                    {{ with .Site.Params.DateForm }}
+                    {{ .Date.Format . }}
+                    {{ else }}
+                    {{ .Date.Format "2006 Jan 02" }}
+                    {{ end }}
+                </time>
+            </span>|
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </li>
+        {{ end }}
+        {{ if gt (len $posts) 5 }}
+        <li><a href="{{ $section }}">(...{{len $posts}} {{ $section }})</a></li>
+        {{ end }}
+    </ul>
 </div>
