--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -1,36 +1,41 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>{{ .Site.Title }}</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <meta name="description" content="{{ .Site.Params.Description }}"/>
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-        <!-- HTML -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
-        <link rel="stylesheet" type="text/css" href="/css/main.css" />
-    </head>
-    <body>
-        <main>
-            <div class="article-header">
-                <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}">~/{{.Site.Title }}{{.Site.LanguagePrefix }}</a>{{ if .IsHome }}{{ else if .IsNode }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ lower .Title }}">/{{ lower .Title }}</a>
-                {{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ .Section }}">/{{ .Section }}</a><a>/{{ .Slug }}</a>{{ end }}
+
+<head>
+    <title>{{ .Page.Title }}</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="{{ .Site.Params.Description }}" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+</head>
+
+<body>
+    <main>
+        <div class="article-header">
+            <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}">~/{{.Site.Title }}{{.Site.LanguagePrefix }}</a>{{ if
+            .IsHome }}{{ else if .IsNode }}<a
+                href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ lower .Title }}">/{{ lower .Title }}</a>
+            {{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ .Section }}">/{{ .Section
+                }}</a><a>/{{ .Slug }}</a>{{ end }}
+        </div>
+        <aside class="head-aside">
+            <div class="sidenote">
+                {{ if .IsPage }}
+                created: {{ $.Date.Format "Jan 02 2006" }}<br />
+                updated: {{ .Lastmod.Format "Jan 02 2006" }}<br />
+                {{end}}
+                {{ if or ( .IsSection) (eq .Kind "term")}}
+                <a href="./index.xml">RSS feed</a> for /{{ .Title | lower }}<br />
+                {{ end }}
+                <br />
+                {{ .Site.Params.Redirect | markdownify }}<br /><strong>$ curl -L
+                    edouard.paris{{ strings.TrimSuffix "/" (.RelPermalink) }} | less</strong>
+                <br />
+                {{ if .Params.toc }}
+                {{.TableOfContents}}
+                {{ end }}
             </div>
-            <aside class="head-aside">
-                <div class="sidenote">
-                    {{ if .IsPage }}
-                        created: {{ $.Date.Format "Jan 02 2006" }}<br/>
-                        updated: {{ .Lastmod.Format "Jan 02 2006" }}<br/>
-                    {{end}}
-                    {{ if or ( .IsSection) (eq .Kind "term")}}
-                    <a href="./index.xml">RSS feed</a> for /{{ .Title | lower }}<br/>
-                    {{ end }}
-                    <br/>
-                    {{ .Site.Params.Redirect | markdownify }}<br/><strong>$ curl -L
-                        edouard.paris{{ strings.TrimSuffix "/" (.RelPermalink) }} | less</strong>
-                    <br/>
-                    {{ if .Params.toc }}
-                        {{.TableOfContents}}
-                    {{ end }}
-                </div>
-            </aside>
+        </aside>
