Add small white padding to article images

--- a/themes/phrck/layouts/shortcodes/image.html
+++ b/themes/phrck/layouts/shortcodes/image.html
@@ -3,5 +3,7 @@
   {{ .Get "alt" }}
   </div>
 </aside>
-<a href="{{ .Get "src"}}" target="_blank"><img src="{{ .Get "src" }}" alt="{{ .Get "alt" }}"></a>
+<div class="article-body-image">
+  <a href="{{ .Get "src"}}" target="_blank"><img src="{{ .Get "src" }}" alt="{{ .Get "alt" }}"></a>
+</div>
 
